# MORAC

src/: CMakeLists.txt
src/include/: token.h
src/include/lexer/: chartype.h  lexer.h  state.h  state_utils.h
src/src/: lexer.c  token.c
src/src/lexer/: chartype.c  state.c  state_utils.c
src/tests/: test_lexer.c
